--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -40,12 +40,27 @@
   pages = {1035-1047}
 }
 @inproceedings{burlet2013,
-  author = {G. Burlet and I. Fujinaga},
-  title = {Robotaba guitar tablature transcription framework},
-  booktitle = {Proceedings of the IEEE Transactions on Speech and Language Processing},
-  address = {Curitiba, Brazil},
-  month = {November},
-  year = {2013}
+	author = {G. Burlet and I. Fujinaga},
+	title = {Robotaba guitar tablature transcription framework},
+	year = {2013},
+	month = {November},
+	booktitle = {Proceedings of the 14th International Society for Music Information Retrieval Conference},
+}
+@mastersthesis{burlet2015,
+  author = {Gregory D. Burlet},
+  title = {Guitar Tablature Transcription using a Deep Belief Network},
+  school = {University of Alberta},
+  address = {Canada},
+  year = {2015}
+}
+@inproceedings{burns2006,
+	author = {A. M. Burns and M. M. Wanderley,},
+	title = {Visual methods for the retrieval of guitarist fingering},
+	year = {2006},
+	month = {June},
+  address = {France},
+	booktitle = {Proc. Conf. New Interfaces for Musical Expression},
+  pages = {196-199}
 }
 @inproceedings{dittmar2013,
   author = {C. Dittmar and A. M{\"a}anchen and J. Abe{\ss}er},
@@ -110,14 +125,14 @@
   year = {2010}
 }
 @inproceedings{gagnon2003,
-  author = T. Gagnon and S. Larouche and R. Lefebvre},
+  author = {T. Gagnon and S. Larouche and R. Lefebvre},
   title = {A neural network approach for preclassification in musical chords recognition},
   booktitle = {Conf. Rec. 37th Asilomar Conf. Signals, Systems, Comput.},
   year = {2003},
   volume = {2},
   pages = {2106-2109}
 }
-@article{galembo1994
+@article{galembo1994,
   author = {A. Galembo and A. Askenfelt},
   title = {Measuring inharmonicity through pitch extraction},
   journal = {STL-QPSR},
@@ -126,7 +141,7 @@
   year = {1994},
   pages = {135-144}
 }
-@article{galembo1999
+@article{galembo1999,
   author = {Alexander Galembo and Anders Askenfelt},
   journal = {IEEE Transactions on Speech and Audio Processing},
   volume = {7},
@@ -168,6 +183,13 @@
   address = {Erlangen, Germany},
   year = {2014}
 }
+@inproceedings{kerd2007,
+  author = {C. Kerdvibulvech and H. Saito},
+  title = {Vision-based detection of guitar players’ fingertips without markers},
+  booktitle = {Comput. Graph., Imag., Visualisat. (CGIV)},
+  year = {2007},
+  pages = {419-428}
+}
 @inproceedings{macrae2010,
   author = {R. Macrae and S. Dixon},
   title = {A guitar tablature score follower},
@@ -208,6 +230,20 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   address = {Dublin, Ireland}
   year = {2009}
 }
+@inproceedings{paleari2008,
+  author = {M. Paleari and B. Huet and A. Schutz and D. Slock},
+  title = {A multimodal approach to music transcription},
+  booktitle = {Proc. 15th IEEE Int. Conf. Image Process (ICIP)},
+  pages = {93-96},
+  year = {2008}
+}
+@inproceedings{radicioni2005,
+  author = {D. Radicioni and C. D. Scienza and V. Lombardo},
+  title = {Guitar fingering for music performance},
+  booktitle = {Proc. Int. Comput. Music Assoc.},
+  year = {2005},
+  pages = {527-530}
+}
 @inproceedings{radisav2004,
   author = {A. Radisavljevic and P. Driessen},
   title = {Path difference learning for guitar fingering problem},
@@ -223,6 +259,14 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   number = {5},
   pages = {184-189},
 }
+@article{sayegh1989,
+  author = {S. Sayegh},
+  title = {Fingering for string instruments with the optimum path paradigm},
+  journal = {Computer Music Journal},
+  year = {1989},
+  volume = {13},
+  number = {3},
+  pages = {76-84},
 @article{shi2000,
   author = {J. Shi and J. Malik},
   title = {Normalized cuts and image segmentation},
@@ -232,6 +276,13 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   number = {8},
   month = {August},
   pages = {888-905}
+}
+@inproceedings{tuohy2006,
+  author={D. Tuohy and W. D. Potter},
+  title="Generating Guitar Tablature with {LHF} Notation Via {DGA} and {ANN}",
+  booktitle={Advances in Applied Artificial Intelligence: 19th International Conference on Industrial, Engineering and Other Applications of Applied Intelligent Systems, {IEA/AIE} 2006, Annecy, France, June 27-30, 2006, Proceedings},
+  year="2006",
+  pages={244-253},
 }
 @inproceedings{yazawa2013,
   author = {K. Yazawa and D. Sakaue and K. Nagira and K. Itoyama and H. Okuno},
