--- a/final/final.tex
+++ b/final/final.tex
@@ -88,17 +88,22 @@ Dr. Richard Stern, Dr. Thomas Sullivan \\
 
 %\doublespacing
 \begin{abstract}
-We propose and evaluate an additional exclusively inharmonicity-based method for automatic tablature transcription using only audio. First, we characterize each guitar string as the linear trajectory between its log-inharmonicity and fundamental pitch. Then we use these learned trends to classify string labels of unseen guitar notes in the following manner. The system assigns to a note the string whose trajectory approximates its estimated inharmonicity with minimal residual. Given the tuning of the guitar that produced the unseen note, we infer its associated tablature, which allows for further string classification refinement by rejecting and reassigning implausible fret assignments. Average error probabilities achieved with this system for classical, acoustic, and electric guitars in the RWC instruments dataset rivaled those of existing inharmonicity-based systems. We also derive and evaluate an inharmonicity compensation feature to allow for transcription of arbitrarily-tuned guitars, provided the tuning is known. With this enhancement, our average system accuracy improves by $5$ points on alternate-tuned guitars, compared to performance with no tuning compensation. Overall, the results show that residual minimization between unseen guitar notes' estimated inharmonicities and reference guitar strings' inharmonicity trajectories is a valid classification approach for the tablature transcription task.
+We propose and evaluate an additional exclusively inharmonicity-based method for automatic guitar tablature transcription using only audio. First, we characterize each guitar string as the linear trajectory of its log-inharmonicity with respect to its fundamental pitch. Then we use these learned trends to classify string labels of unseen guitar notes in the following manner. The system assigns to a note the string whose trajectory approximates its estimated inharmonicity with minimal residual. Given the tuning of the guitar that produced the unseen note, we infer its associated tablature, which allows for further string classification refinement by rejecting and reassigning implausible fret assignments. Average error probabilities achieved with this system for classical, acoustic, and electric guitars in the RWC instruments dataset rivaled those of existing inharmonicity-based systems. We also derive and evaluate an inharmonicity compensation feature to allow for transcription of arbitrarily-tuned guitars, provided the tuning is known. With this enhancement, our average system accuracy improves by $5$ points on alternate-tuned guitars, compared to performance with no tuning compensation. Overall, the results show that residual minimization between unseen guitar notes' estimated inharmonicities and reference guitar strings' inharmonicity trajectories is a valid classification approach for the tablature transcription systems.
 
 \end{abstract}
 %\singlespacing
 
 \begin{acknowledgments}
-Rich Stern
-Tom Sullivan
-Che-yuan Liang, Raymond Xia
-Hodgkinson -- for sharing MAT algorithm
-Abesser,Barbancho -- for their helpful correspondence
+My sincere gratitude goes to Rich Stern for advising me every step of this journey. I'd never before tackled a research project of this scope, but Rich's guidance, patience, and insight somehow made this thesis possible. I'll miss our weekly one-on-one meetings that evolved into friendly chats about music, family, and life.
+
+I'm indebted to Tom Sullivan for lending his qualified examination of this thesis. I'm also indebted to him in the literal sense as he welcomed me to Pittsburgh by treating me to lunch. His hospitality and accessibility helped me know I was in the right place.
+
+My peers Che-yuan Liang and Raymond Xia have both, of their own accord, contributed meaningfully to this work through our many brainstorming and discussion sessions, and for them I'm grateful. I'd like to thank Matthieu Hodgkinson for sharing with me his MAT algorithm code, as well as Jacob Abesser and Isabel Barbancho for their helpful correspondence. Special thanks to Nick Pourazima, whose Fender Telecaster we recorded for experiments.
+
+I need to thank the remainder of my CMU graduate music technology cohort -- Devansh Zurale, Steven Krenn, Chen Liang, Mutian Fu, Hao Huang, Anirudh Mani, Garrett Osborn, and Nick Pourazima -- for the support role they played by simply being the fun constructive community that they were.
+
+Finally, I acknowledge my mom and dad, to whom all success is due. I'd also like to thank my brother Nick Michelson solely for persuading me to abandon writing a grandiose Acknowledgments section, and definitely nothing else.
+
 \end{acknowledgments}
 
 
@@ -138,13 +143,13 @@ A consequence of the strings' open-tunings and extensive fretting locations is l
 Tablature, on the other hand, is an alternative music notation that doesn't suffer from the one-to-many mapping of scores. The staff, instead of representing pitch as in classical scores, depicts a birds-eye view of the guitar neck from the performer's perspective. Each of the six horizontal lines signify a corresponding string on the guitar, and numbers on each line specify the fret to be played. Time progresses from left to right as in scores. 
 
 \begin{figure}[h] 
-\label{fig:score-tabs}
 \centering
 \includegraphics[scale=0.8]{score-tabs}
 \caption{Musical score and two identical realizations of that score in tablature notation. Figure taken from~\cite{barbanchoi2012}.}
+\label{fig:score-tabs}
 \end{figure}
 
-Tablature (abbr. tabs) is widely more popular than scores for a number of likely reasons~\cite{macrae2010}. Its accessibility is attractive to those without formal musical training; reading a pictorial representation of the fretboard poses a smaller learning curve than understanding music theory and score notation. Additionally, the lines and numbers in tablature that represent the strings and frets are easily represented with ASCII characters, rendering it an exceptionally portable mode of communication. Indeed, one can create, modify, and transfer tablature files using simply a text editor.
+Tablature (abbr. tabs) is widely more popular than scores for a number of likely reasons~\cite{macrae2010}. Its accessibility is attractive to those without formal musical training; interpreting a pictorial representation of the fretboard poses a smaller learning curve than studying music theory and deciphering score notation. Additionally, the lines and numbers in tablature that represent the strings and frets are easily represented with ASCII characters, rendering it an exceptionally portable mode of communication. Indeed, one can create, modify, and transfer tablature files using simply a text editor.
 
 Accurate tablature transcription is a fairly laborious task, however. Dependable tabs containing few errors typically require a seasoned musician's careful listening to an audio recording, and possibly video recordings if for additional consultation. Reliable automation of this transcription task would benefit the guitar student community by expediting quality tab generation and unearthing fretboard positions of guitar riffs in songs for which accurate tabs don't yet exist. Recent technologies proposed to encourage proliferation of accessible tab transcription systems, such as web framework Robotaba~\cite{burlet2013}, demonstrate a desire among MIR researchers to see this theoretically mature but practically nascent field mature into student-benefitting applications. 
 
@@ -183,10 +188,10 @@ where $f_k$ is the $k$th harmonic of fundamental $f_0$ and $\beta$ is the string
 In words, the inharmonicity $\beta$ of a vibrating string is a dimensionless quantity that depends on the string's Young's modulus $Q$, diameter $d$, tension $T$, and vibrating length $l$, and which scales the degree of deviation of the string's $k$th partial according to equation~(\ref{eq:fk}). See Figure~\ref{fig:skew}. Note that for an ideally harmonic string, $\beta = 0$ and~(\ref{eq:fk}) reduces to $f_k = kf_0$, aligning with intuition about harmonics' ideal locations in frequency as simply integer multiples of the fundamental.
 
 \begin{figure}[!htbp]
-\label{fig:skew}
 \centering
 \includegraphics[scale=0.65]{skew}
 \caption{Power spectrum of note D2 plucked on an electric guitar at string 5 and fret 5. Red dashed lines are drawn at integer multiples of the fundamental. Note the rightward skew of the measured partial peaks.}
+\label{fig:skew}
 \end{figure}
 
 Inharmonicity's suitability for the string discrimination task can be understood through equation~(\ref{eq:beta}). The six strings of any guitar necessarily exhibit different combinations of $Q$, $d$, and $T$ due to varying thicknesses, material, and tuning. Each string therefore has an "inharmonic signature" which presumably distinguishes it from the others. Capturing the pattern of a string's inharmonicity variation along its frets should thus reveal sufficiently identifying information.
@@ -220,10 +225,10 @@ Barbancho~\cite{barbanchoi2012} derived that inharmonicity varies in a determini
 In other words, the variation in inharmonicity along a given string can be expressed simply in terms of its open-note inharmonicity, effectively defining a restricted trajectory along which the inharmonicity must vary. Figure~\ref{fig:beta-trajectories-ag} illustrates these trajectories.
 
 \begin{figure}[h] 
-\label{fig:beta-trajectories-ag}
 \centering
 \includegraphics[scale=0.70]{beta-trajectories-ag}
 \caption{Example inharmonicity trajectories of acoustic guitar strings. Only frets 0 (open-string) through 3 are shown. Observe the restriction to the exponential trajectory defined by equation~\eqref{eq:beta-traj}.}
+\label{fig:beta-trajectories-ag}
 \end{figure}
 
 Recognizing this, they were able to successfully transcribe string and fret number of an unknown guitar note. Their system's essential mechanism was a similarity-determination routine $A(X,\hat{\beta}_s)$ that quantified the resemblance between an unknown note's spectrum $X$ and the expected inharmonicities $\hat\beta_s$ of candidate strings $s$ from which the note could have originated. First, to estimate an open-note's inharmonicity they followed the procedure described in section~\ref{lit-beta-est} in which they estimated its fundamental, then catalogued its partials' deviations from their ideal harmonic locations, and fit to them a polynomial from whose coefficients they derived the inharmonicity estimate. Next, they inferred the corresponding fret on which the note could be played for each candidate string, and used these string-fret candidate numbers in equation~\eqref{eq:beta-traj} to obtain expected inharmonicity values of the unknown note for each candidate string. In other words, they followed each candidate string's inharmonicity trajectory to arrive at an expected inharmonicity value at the appropriate fret. Lastly, they applied their similarity determination algorithm $A(X,\hat{\beta}_s)$, which went as follows. For each candidate fretboard position, they obtained the expected skewed frequency locations at which to find the inharmonic peaks, and searched the note's spectrum for them using search windows centered at those expected locations. They performed this search for a set number of peaks, all the while cataloguing their deviation from the search window centers. Their motivation was that the expected inharmonicity of the true fretboard position would produce a spectrum with inharmonic peaks that were measurably more coincident with the inharmonic peaks of the unknown note than were any of the imposter strings. They found that, indeed, the inharmonicity of the fretboard position on which the note was truly plucked yielded the largest number of coincident located peaks inside the spectral search window bounds, hence our name "partials coincidence tally" for their algorithm. Their work demonstrated the sufficiency of inharmonicity as a discriminating feature.
@@ -264,10 +269,10 @@ Next in our pipeline, we apply a log transformation to the estimated inharmonici
 where $m_{os}$ is the open-string pitch of string $s$. The exponential trajectory is maintained since incrementing both fret number and MIDI pitch number accomplishes an equivalent increase in fundamental frequency. Figure~\ref{fig:beta-v-midi} illustrates the trajectories in terms of MIDI pitches.
 
 \begin{figure}[h] 
-\label{fig:beta-v-midi}
 \centering
 \includegraphics[scale=0.7]{beta-v-midi}
 \caption{Inharmonicity estimates for frets 0-12 on strings 1-6 of RWC acoustic guitar 111AG. Note the exponential trajectory as in Fig.~\ref{fig:beta-trajectories-ag} and the increased segregation since notes and their inharmonicities are now plotted against their fundamental instead of their fret number.}
+\label{fig:beta-v-midi}
 \end{figure}
 
 Now if we consider the log-inharmonicity $\beta_{l}(m)$, we see that
@@ -288,10 +293,10 @@ where string $s$ has been dropped from the notation since we're looking only at 
 showing us that the log-inharmonicity trajectory of a given string varies linearly with respect to MIDI pitch. See Figure~\ref{fig:log-beta-v-midi}. This relationship also holds for fret number, but fundamental pitch is a more likely and generic feature to have been estimated, and consequently is more relevant to consider here.
 
 \begin{figure}[!htbp] 
-\label{fig:log-beta-v-midi}
 \centering
 \includegraphics[scale=0.7]{log-beta-v-midi}
 \caption{Log-inharmonicity estimates for same frets, strings, and guitar as Fig.~\ref{fig:beta-v-midi}}
+\label{fig:log-beta-v-midi}
 \end{figure}
 
 \section{Learning Inharmonicity Trajectories}
@@ -307,10 +312,10 @@ The other method we use is linear regressions for obtaining \textit{empirical} l
 which yields the weight vector $\mathbf{w}_s$ that minimizes the sum of squared error between the measured and predicted inharmonicities of the notes belonging to string $s$. Figure~\ref{fig:traj-v-reg} illustrates the differences between the trajectory and regression approaches.
 
 \begin{figure}[!htbp] 
-\label{fig:traj-v-reg}
 \centering
 \includegraphics[scale=0.75]{traj-v-reg}
 \caption{Comparison of string characterization approaches for our recorded Fender Telecaster. Top: inharmonicity \textit{trajectories}. Note how each line begins precisely at the first marker of each string (i.e. the open-string note) and continues along a trajectory that ignores empirical inharmonicity estimates. String 1 most clearly shows this. Additionally, the trajectories for strings 3 and 4 are effectively co-linear and therefore indiscriminible. Bottom: inharmonicity \textit{regressions}. Each regression was obtained by minimizing the bisquare weighted error of the string's residuals, so the lines more closely follow the empirical inharmonicity scatterplot estimates.}
+\label{fig:traj-v-reg}
 \end{figure}
 
 Mistakes in the inharmonicity estimation routine would sometimes produce outliers that deviated substantially from the linear trajectory model, and which disproportionately skewed the regressions. For this reason, we rather performed a bisquare weighted linear regression, instead of the standard unweighted regression in~\eqref{lin-reg}, to empirically approximate the log-inharmonicities. Bisquare weighting is a robust linear regression procedure that minimizes a weighted sum of squares that de-emphasizes outliers. The iterative procedure works as follows. First, a regular least squares fit is obtained. Then, the standardized adjusted residuals are computed according to
@@ -424,10 +429,10 @@ We further refine the fretboard estimates with "plausbility filtering"~\cite{abe
 \section{System Overview}
 Below in Figure~\ref{fig:overview}, we summarize the operation of our system. Inharmonicity estimates are obtained for our training guitars' notes, then we represent these estimates in log-inharmonicity space with respect to MIDI pitch to obtain linear trends. We then check if the evaluation guitars' tunings are non-standard, and if so, we appropriately compensate the weight vectors that define the linear trajectories. Next, we perform classification on evaluation recordings by assigning to unknown notes the strings whose log-inharmonicity trajectories minimize the residual errors of the notes' log-inharmonicities. Finally, tablature conversion and refinement is performed with plausibility and constraint filtering.
 \begin{figure}[!htbp] 
-\label{fig:overview}
 \centering
 \includegraphics[scale=0.6]{overview}
 \caption{System overview of tablature transcription with log-inharmonicity trajectories using residual minimization classification.}
+\label{fig:overview}
 \end{figure}
 
 \noindent
@@ -659,28 +664,28 @@ Interestingly, classification using regressions on inharmonicity estimates colle
 
 Insight into the error probabilities in Tables~\ref{tab:error-results-RWC} is gained when considering the string-wise breakdowns of F1-scores in Tables~\ref{tab:cg-str-f},~\ref{tab:ag-str-f}, and~\ref{tab:eg-str-f}. We see that across all guitars, strings 2, 3, and 4 consistently exhibit lower F1-scores. Strings 1, 5, and 6, contrastingly, exhibit exceptional performance, so we know that any poor results in Table~\ref{tab:error-results-RWC} stem from poor accuracy on these problematic "middle" strings that are physically surrounded on the instrument by higher and lower strings. We thus see a flaw in this residual-based inharmonicity similarity approach: because of its inherently spatial classification decision (residual minimization), this system exhibits poor performance on strings whose trajectories share overlapping regions in inharmonicity-pitch space.
 
-It's unclear why performance for electric guitars is invariably worse than for classicals and acoustics. To investigate, we visually compared the string-wise inharmonicity regressions of all guitars in each guitar class. As can be seen in Figures~\ref{fig:traj-compare-cg},~\ref{fig:traj-compare-ag}, and~\ref{fig:traj-compare-eg}, the classical and acoustic guitars' inharmonicity regressions remain fairly stable from guitar to guitar, whereas those of the electric guitars clearly exhibit more variability, making residual-based classification more difficult. Electric guitar regressions belonging to strings 3 and 4 overlap considerably, which is a behavior not absent in the classicals (strings 1 and 4, 2 and 5, 3 and 6) and acoustics (strings 2 and 3) with some strings but which manifests in less error due to their regressions' more consistent placements than those of their electric counterparts. Indeed, the electric guitars' confusion matrices support this, and one which highlights this error trend is shown in Table~\ref{tab:cf-eg}. 
+It's unclear why performance for electric guitars is invariably worse than for classicals and acoustics. To investigate, we visually compared the string-wise inharmonicity regressions of all guitars in each guitar class. As can be seen in Figures~\ref{fig:cg-traj-comp},~\ref{fig:ag-traj-comp}, and~\ref{fig:eg-traj-comp}, the classical and acoustic guitars' inharmonicity regressions remain fairly stable from guitar to guitar, whereas those of the electric guitars clearly exhibit more variability, making residual-based classification more difficult. Electric guitar regressions belonging to strings 3 and 4 overlap considerably, which is a behavior not absent in the classicals (strings 1 and 4, 2 and 5, 3 and 6) and acoustics (strings 2 and 3) with some strings but which manifests in less error due to their regressions' more consistent placements than those of their electric counterparts. Indeed, the electric guitars' confusion matrices support this, and one which highlights this error trend is shown in Table~\ref{tab:cf-eg}. 
 %Example confusion matrices for the CGs and AGs are also shown; the overlapping error doesn't seem to affect the CGs and AGs nearly as much, since their regression variability is much smaller.
 
 \begin{figure}[!htbp] 
-\label{fig:traj-compare-cg}
 \centering
 \includegraphics[scale=0.75]{traj-compare-cg}
 \caption{Superimposed string-wise regressions of all three RWC classical guitars. Top: strings 1, 2, and 3. Bottom: strings 4, 5, and 6. Plots were separated for visibility, and axes scales were kept identical for comparison. Observe the consistent intercept and slope despite varying guitar (with the only exception being string 6).}
+\label{fig:cg-traj-comp}
 \end{figure}
 
 \begin{figure}[!htbp] 
-\label{fig:traj-compare-ag}
 \centering
 \includegraphics[scale=0.75]{traj-compare-ag}
 \caption{Superimposed string-wise regressions of all three RWC acoustic guitars. Top: strings 1 and 2. Bottom: strings 3, 4, 5, and 6. Plots were separated for visibility, and axes scales were kept identical for comparison. Observe the consistent intercept and slope despite varying guitar.}
+\label{fig:ag-traj-comp}
 \end{figure}
 
 \begin{figure}[!htbp] 
-\label{fig:traj-compare-eg}
 \centering
 \includegraphics[scale=0.75]{traj-compare-eg}
 \caption{Superimposed string-wise regressions of all three RWC electric guitars. Top: strings 1, 2, and 3. Bottom: strings 4, 5, and 6. Plots were separated for visibility, and axes scales were kept identical for comparison. Observe the \textit{inconsistent} intercept and slope. In particular, note the overlap between one of string 3's regressions (dashed red) and string 2's regressions. Also observe the overlapping slope and intercept ranges for strings 3 and 4 across the two plots.}
+\label{fig:eg-traj-comp}
 \end{figure}
 
 \begin{table}
@@ -713,18 +718,18 @@ Truth &1	&2	&3	&4	&5	&6\\
 Further analysis revealed that inconsistent inharmonicity estimates were responsible for the electric guitars' regression variability. We examined the quality of fit of string regressions obtained from all recordings of each of the 3 guitars from each of the 3 types, and found that the classicals' and acoustics' range of determination coefficients was substantially smaller than the electrics'. Highest and lowest quality regressions for CG091, AG111, and EG131 are shown in Figure~\ref{fig:best-worst-r2} as an example of this; CG091's and AG111's best and worst strings' $r^2$ coefficients differ by only about one-hundredth, but the $r^2$ difference for EG131 is an enormous $0.87$.
 
 \begin{figure}[!htbp] 
-\label{fig:best-worst-r2}
 \centering
 \includegraphics[scale=0.75]{best-worst-r2}
 \caption{Best and worst bisquare log-inharmonicity regression fits, as measured by $r^2$, for representative guitars from each of the three classes. Top row: classical. Middle row: acoustic. Bottom row: electric. Left and right columns are best and worst fits, respectively.}
+\label{fig:best-worst-r2}
 \end{figure}
 
-Speculating why this might be the case, we wondered if the transduction of the EG pickups somehow played a role in obscuring reliable inharmonicity estimation -- either through their transfer functions, possible noise introduction, or some non-linear characteristic. If this were the case, it would follow that higher-intensity performances would elicit this obscuring phenomenon to a greater extent and produce measurably more variable inharmonicity estimates than would lower-intensity performances. Since one of the RWC musicality parameters that varies for each featured guitar is dynamic level of the performance, we were able to separate higher- and lower-intensity performances of the same guitar and analyze this interaction between degree of pickup transduction and inharmonicity estimation variability. For each guitar, and for each string, we collected note performances by common dynamic levels (piano, mezzo, and forte) and regressed their log-inharmonicities against their fundamentals, as usual. We then plotted statistics of the log-inharmonicities' residuals against their played performance intensity. Figure~\ref{fig:eg1-string-dyn} illustrates these statistics for EG131; other electric guitars' boxplots were omitted because their statistics were similar.
+Speculating why this might be the case, we wondered if the transduction of the EG pickups somehow played a role in impeding reliable inharmonicity estimation -- either through their transfer functions, possible noise introduction, or some non-linear characteristic. If this were the case, it would follow that higher-intensity performances would elicit this impeding phenomenon to a greater extent and produce measurably more variable inharmonicity estimates than would lower-intensity performances. Since one of the RWC musicality parameters that varies for each featured guitar is dynamic level of the performance, we were able to separate higher- and lower-intensity performances of the same guitar and analyze this interaction between degree of pickup transduction and inharmonicity estimation variability. For each guitar, and for each string, we collected note performances by common dynamic levels (piano, mezzo, and forte) and regressed their log-inharmonicities against their fundamentals, as usual. We then plotted statistics of the log-inharmonicities' residuals against their played performance intensity. Figure~\ref{fig:eg1-string-dyn} illustrates these statistics for EG131; other electric guitars' boxplots were omitted because their statistics were similar.
 \begin{figure}[!htbp] 
-\label{fig:eg1-string-dyn}
 \centering
 \includegraphics[scale=0.75]{eg1-string-dyn}
 \caption{Boxplots of log-inharmonicity regression residuals for EG131 by dynamic level. Group 1: piano, Group 2: mezzo, Group 3: forte. Red center horizontal lines are medians; top and bottom edges of blue boxes represent upper and lower quartiles; whiskers depict full range of data excluding outliers; red plus signs denote outliers. Vertical axes not constant throughout plots; we're highlighting relative distributions of the boxplots here.}
+\label{fig:eg1-string-dyn}
 \end{figure} 
 We expected that variability would increase with dynamics, but the data didn't support this hypothesis. Interquartile ranges didn't exhibit any clear trend with respect to performance intensity, nor was the magnitude of their variation noteworthy. The cause of the inharmonicity unreliability is therefore probably linked to some spectral characteristic of the electric guitars, e.g. considerably more non-tonal peaks which the MAT algorithm erroneously selects as partials, or some aspect of the pickup's frequency response that's throwing off the MAT algorithm, etc.
 
@@ -747,10 +752,10 @@ A measure of objective confidence in the transcription is required to do this. W
 Another dimension we didn't consider was varying the regression polynomial. It would be interesting to see how differently, if at all, the system would perform if the log inharmonicity transformation was forgone and an exponential fit was explored instead. This should also be investigated in future inharmonicity-based transcription research.
 
 \begin{figure}[!htbp] 
-\label{fig:p-correct-res}
 \centering
 \includegraphics[angle=90,scale=0.65]{p-correct-res}
 \caption{Solid black lines and left vertical axis: probability of correctly transcribing a note given the residual width under which the note's log-inharmonicity falls. Dashed orange lines and right vertical axis: CDF of the log-inharmonicity residuals, so one can get a sense of the proportion of data represented by ticks in the horizontal axis.}
+\label{fig:p-correct-res}
 \end{figure} 
 
 %The basic transcription results obtained in the previous chapter are modest; we achieved overall transcription accuracies of 43\%, 71\%, and 62\% for the RWC classical, acoustic, and electric guitars respectively. These accuracies don't tell the whole story, though. Closer inspection of Tables~\ref{tab:resultsRWC} and~\ref{tab:resultsTune} reveals that performance is heavily string-dependent. We can achieve a 0.93 F1-measure for string 6 (the electric guitar), but our worst-case F1-measure for string 3 is a disappointing 0.07 (also for the electric guitar). This is likely due to the somewhat overlapping inharmonicity trajectories of the inner strings, i.e. string 3 through 5 mainly, which is discussed further below when we consider factors that may have weakened system quality. This disparity between string-wise F1-scores suggests that in its current state, our system is more appropriate for tablature transcription of the "outer" strings, i.e. mainly strings 1, 2, and 6.
