thesis final, backup

--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -205,6 +205,13 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   pages = {9-16},
   year = {2009}
 }
+@misc{matlab-robustfit,
+  author = {{The MathWorks}},
+  title = {{Least-Squares Fitting Documentation}},
+  howpublished = {\url{http://www.mathworks.com/help/curvefit/least-squares-fitting.html}},
+  year = {2017},
+  month = {June}
+}
 @inproceedings{noll1969,
   author = {A. Noll},
   title = {Pitch Determination of Human Speech by the Harmonic Product Spectrum, the Harmonic Sum Spectrum, and a Maximum Likelihood Estimate},
@@ -266,7 +273,16 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   year = {1989},
   volume = {13},
   number = {3},
-  pages = {76-84},
+  pages = {76-84}
+}
+@inproceedings{short2006,
+  author = {K. M. Short and R. A. Garcia},
+  title = {Signal Analysis using the Complex Spectral Phase Evolution {(CSPE)} Method},
+  booktitle = {Audio Engineering Society 120th Convention},
+  address = {Paris, France},
+  year = {2006},
+  month = {May}
+}
 @article{shi2000,
   author = {J. Shi and J. Malik},
   title = {Normalized cuts and image segmentation},
